--- a/background-changer/index.html
+++ b/background-changer/index.html
@@ -8,7 +8,7 @@
     , initial-scale=1.0"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Backgrounder Changer</title>
+    <title>Background Changer</title>
   </head>
   <body>
     <div class="container">
